--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,132 +1,133 @@
 {
-  "Raid.css": {
-    "file": "_app/immutable/assets/Raid-041e27f7.css",
-    "src": "Raid.css"
-  },
   "src/routes/tera-type-calculator.html/+page.css": {
     "file": "_app/immutable/assets/_page-09b3c40f.css",
     "src": "src/routes/tera-type-calculator.html/+page.css"
+  },
+  "src/routes/+page.css": {
+    "file": "_app/immutable/assets/_page-4255f6f5.css",
+    "src": "src/routes/+page.css"
   },
   "sendEvent.css": {
     "file": "_app/immutable/assets/sendEvent-30abcd50.css",
     "src": "sendEvent.css"
   },
   "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-c6dfcd8f.css",
+    "file": "_app/immutable/assets/_layout-121f180c.css",
     "src": "src/routes/+layout.css"
-  },
-  "_singletons-da236e82.js": {
-    "file": "_app/immutable/chunks/singletons-da236e82.js",
-    "imports": [
-      "_index-de548609.js"
-    ]
-  },
-  "_index-de548609.js": {
-    "file": "_app/immutable/chunks/index-de548609.js"
-  },
-  "src/routes/[pokemon=pokemon]/[type=type]/+page.ts": {
-    "file": "_app/immutable/modules/pages/_pokemon_pokemon_/_type_type_/_page.ts-19d66fa6.js",
-    "src": "src/routes/[pokemon=pokemon]/[type=type]/+page.ts",
-    "isEntry": true,
-    "imports": [
-      "__page-4039aba4.js"
-    ]
-  },
-  "__page-4039aba4.js": {
-    "file": "_app/immutable/chunks/_page-4039aba4.js"
-  },
-  ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-340aea7c.js",
-    "src": ".svelte-kit/generated/nodes/2.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__page-e94d8ac7.js",
-      "src/routes/+page.svelte"
-    ]
-  },
-  ".svelte-kit/generated/nodes/5.js": {
-    "file": "_app/immutable/chunks/5-ea0e6e56.js",
-    "src": ".svelte-kit/generated/nodes/5.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__page-621564aa.js",
-      "src/routes/[pokemon=pokemon]/[type=type]/[stars=stars]/+page.svelte"
-    ]
-  },
-  ".svelte-kit/generated/nodes/4.js": {
-    "file": "_app/immutable/chunks/4-3eb2ee93.js",
-    "src": ".svelte-kit/generated/nodes/4.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__page-4039aba4.js",
-      "src/routes/[pokemon=pokemon]/[type=type]/+page.svelte"
-    ]
-  },
-  ".svelte-kit/generated/nodes/7.js": {
-    "file": "_app/immutable/chunks/7-814527fb.js",
-    "src": ".svelte-kit/generated/nodes/7.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__page-90a7f2f4.js",
-      "src/routes/tera-type-calculator.html/+page.svelte"
-    ]
   },
   "__page-da46b06b.js": {
     "file": "_app/immutable/chunks/_page-da46b06b.js"
   },
-  "src/routes/[pokemon=pokemon]/+page.svelte": {
-    "file": "_app/immutable/components/pages/_pokemon_pokemon_/_page.svelte-41ceaca4.js",
-    "src": "src/routes/[pokemon=pokemon]/+page.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-de548609.js",
-      "_Raid-5caf2225.js"
-    ]
-  },
-  "_Scripts-8152b69a.js": {
-    "file": "_app/immutable/chunks/Scripts-8152b69a.js",
-    "imports": [
-      "_index-de548609.js"
-    ]
+  "__page-fca24c55.js": {
+    "file": "_app/immutable/chunks/_page-fca24c55.js"
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-6d8519b4.js",
+    "file": "_app/immutable/chunks/1-cd3bc45e.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
       "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
     ]
   },
-  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-da2d7224.js",
-    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
-    "isEntry": true,
+  ".svelte-kit/generated/nodes/3.js": {
+    "file": "_app/immutable/chunks/3-e74d7df3.js",
+    "src": ".svelte-kit/generated/nodes/3.js",
+    "isDynamicEntry": true,
     "imports": [
-      "_index-de548609.js",
-      "_stores-c0960786.js"
+      "__page-e94d8ac7.js",
+      "src/routes/privacy-policy.html/+page.svelte"
     ]
   },
-  "__page-fca24c55.js": {
-    "file": "_app/immutable/chunks/_page-fca24c55.js"
+  ".svelte-kit/generated/nodes/5.js": {
+    "file": "_app/immutable/chunks/5-dbd8d9b8.js",
+    "src": ".svelte-kit/generated/nodes/5.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__page-fca24c55.js",
+      "src/routes/type-table.html/+page.svelte"
+    ]
   },
   "__page-90a7f2f4.js": {
     "file": "_app/immutable/chunks/_page-90a7f2f4.js"
   },
-  "_stores-c0960786.js": {
-    "file": "_app/immutable/chunks/stores-c0960786.js",
-    "imports": [
-      "_index-de548609.js",
-      "_singletons-da236e82.js"
-    ]
-  },
-  "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-cc080b21.js",
-    "src": "src/routes/+page.svelte",
+  "src/routes/privacy-policy.html/+page.ts": {
+    "file": "_app/immutable/modules/pages/privacy-policy.html/_page.ts-94291217.js",
+    "src": "src/routes/privacy-policy.html/+page.ts",
     "isEntry": true,
     "imports": [
-      "_index-de548609.js",
-      "_Raid-5caf2225.js",
-      "_Scripts-8152b69a.js"
+      "__page-e94d8ac7.js"
+    ]
+  },
+  ".svelte-kit/generated/nodes/4.js": {
+    "file": "_app/immutable/chunks/4-2af9fd5d.js",
+    "src": ".svelte-kit/generated/nodes/4.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__page-da46b06b.js",
+      "src/routes/tera-type-calculator.html/+page.svelte"
+    ]
+  },
+  "src/routes/type-table.html/+page.ts": {
+    "file": "_app/immutable/modules/pages/type-table.html/_page.ts-94291217.js",
+    "src": "src/routes/type-table.html/+page.ts",
+    "isEntry": true,
+    "imports": [
+      "__page-fca24c55.js"
+    ]
+  },
+  "_stores-625d1a5d.js": {
+    "file": "_app/immutable/chunks/stores-625d1a5d.js",
+    "imports": [
+      "_index-df1b6393.js",
+      "_singletons-9e424c52.js"
+    ]
+  },
+  "_Scripts-d73a1027.js": {
+    "file": "_app/immutable/chunks/Scripts-d73a1027.js",
+    "imports": [
+      "_index-df1b6393.js"
+    ]
+  },
+  "src/routes/type-table.html/+page.svelte": {
+    "file": "_app/immutable/components/pages/type-table.html/_page.svelte-155300dd.js",
+    "src": "src/routes/type-table.html/+page.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-df1b6393.js",
+      "_interfaces-64f496f9.js",
+      "_Scripts-d73a1027.js"
+    ]
+  },
+  "__page-e94d8ac7.js": {
+    "file": "_app/immutable/chunks/_page-e94d8ac7.js"
+  },
+  "_interfaces-64f496f9.js": {
+    "file": "_app/immutable/chunks/interfaces-64f496f9.js"
+  },
+  ".svelte-kit/generated/nodes/2.js": {
+    "file": "_app/immutable/chunks/2-a83531b0.js",
+    "src": ".svelte-kit/generated/nodes/2.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__page-90a7f2f4.js",
+      "src/routes/+page.svelte"
+    ]
+  },
+  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
+    "file": "_app/immutable/components/error.svelte-f3f86a35.js",
+    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-df1b6393.js",
+      "_stores-625d1a5d.js"
+    ]
+  },
+  ".svelte-kit/generated/nodes/0.js": {
+    "file": "_app/immutable/chunks/0-3a5a799b.js",
+    "src": ".svelte-kit/generated/nodes/0.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "src/routes/+layout.svelte"
     ]
   },
   "src/routes/+page.ts": {
@@ -134,7 +135,7 @@
     "src": "src/routes/+page.ts",
     "isEntry": true,
     "imports": [
-      "__page-e94d8ac7.js"
+      "__page-90a7f2f4.js"
     ]
   },
   "src/routes/tera-type-calculator.html/+page.ts": {
@@ -142,116 +143,25 @@
     "src": "src/routes/tera-type-calculator.html/+page.ts",
     "isEntry": true,
     "imports": [
-      "__page-90a7f2f4.js"
-    ]
-  },
-  ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-d5e63082.js",
-    "src": ".svelte-kit/generated/nodes/3.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__page-bfda8c82.js",
-      "src/routes/[pokemon=pokemon]/+page.svelte"
-    ]
-  },
-  "src/routes/type-symbols.html/+page.ts": {
-    "file": "_app/immutable/modules/pages/type-symbols.html/_page.ts-94291217.js",
-    "src": "src/routes/type-symbols.html/+page.ts",
-    "isEntry": true,
-    "imports": [
       "__page-da46b06b.js"
     ]
   },
-  "__page-bfda8c82.js": {
-    "file": "_app/immutable/chunks/_page-bfda8c82.js"
-  },
-  "src/routes/[pokemon=pokemon]/[type=type]/[stars=stars]/+page.ts": {
-    "file": "_app/immutable/modules/pages/_pokemon_pokemon_/_type_type_/_stars_stars_/_page.ts-6e5442f6.js",
-    "src": "src/routes/[pokemon=pokemon]/[type=type]/[stars=stars]/+page.ts",
-    "isEntry": true,
+  "_singletons-9e424c52.js": {
+    "file": "_app/immutable/chunks/singletons-9e424c52.js",
     "imports": [
-      "__page-621564aa.js"
+      "_index-df1b6393.js"
     ]
   },
-  "src/routes/privacy-policy.html/+page.ts": {
-    "file": "_app/immutable/modules/pages/privacy-policy.html/_page.ts-94291217.js",
-    "src": "src/routes/privacy-policy.html/+page.ts",
-    "isEntry": true,
-    "imports": [
-      "__page-fca24c55.js"
-    ]
-  },
-  "src/routes/[pokemon=pokemon]/+page.ts": {
-    "file": "_app/immutable/modules/pages/_pokemon_pokemon_/_page.ts-7dc16dc1.js",
-    "src": "src/routes/[pokemon=pokemon]/+page.ts",
-    "isEntry": true,
-    "imports": [
-      "__page-bfda8c82.js"
-    ]
-  },
-  ".svelte-kit/generated/nodes/6.js": {
-    "file": "_app/immutable/chunks/6-e60c0da4.js",
-    "src": ".svelte-kit/generated/nodes/6.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__page-fca24c55.js",
-      "src/routes/privacy-policy.html/+page.svelte"
-    ]
-  },
-  "__page-621564aa.js": {
-    "file": "_app/immutable/chunks/_page-621564aa.js"
-  },
-  "_interfaces-64f496f9.js": {
-    "file": "_app/immutable/chunks/interfaces-64f496f9.js"
-  },
-  ".svelte-kit/generated/nodes/8.js": {
-    "file": "_app/immutable/chunks/8-941826d9.js",
-    "src": ".svelte-kit/generated/nodes/8.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__page-da46b06b.js",
-      "src/routes/type-symbols.html/+page.svelte"
-    ]
-  },
-  "src/routes/[pokemon=pokemon]/[type=type]/[stars=stars]/+page.svelte": {
-    "file": "_app/immutable/components/pages/_pokemon_pokemon_/_type_type_/_stars_stars_/_page.svelte-3e54601f.js",
-    "src": "src/routes/[pokemon=pokemon]/[type=type]/[stars=stars]/+page.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-de548609.js",
-      "_Raid-5caf2225.js"
-    ]
-  },
-  ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-091eaf04.js",
-    "src": ".svelte-kit/generated/nodes/0.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "src/routes/+layout.svelte"
-    ]
-  },
-  "__page-e94d8ac7.js": {
-    "file": "_app/immutable/chunks/_page-e94d8ac7.js"
-  },
-  "src/routes/type-symbols.html/+page.svelte": {
-    "file": "_app/immutable/components/pages/type-symbols.html/_page.svelte-595f2fd8.js",
-    "src": "src/routes/type-symbols.html/+page.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-de548609.js",
-      "_interfaces-64f496f9.js",
-      "_Scripts-8152b69a.js"
-    ]
+  "_index-df1b6393.js": {
+    "file": "_app/immutable/chunks/index-df1b6393.js"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-de208840.js",
+    "file": "_app/immutable/start-58dbc201.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-de548609.js",
-      "_singletons-da236e82.js",
-      "_tera.raid-390cb35e.js",
-      "_interfaces-64f496f9.js"
+      "_index-df1b6393.js",
+      "_singletons-9e424c52.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
@@ -259,92 +169,66 @@
       ".svelte-kit/generated/nodes/2.js",
       ".svelte-kit/generated/nodes/3.js",
       ".svelte-kit/generated/nodes/4.js",
-      ".svelte-kit/generated/nodes/5.js",
-      ".svelte-kit/generated/nodes/6.js",
-      ".svelte-kit/generated/nodes/7.js",
-      ".svelte-kit/generated/nodes/8.js"
-    ]
-  },
-  "src/routes/[pokemon=pokemon]/[type=type]/+page.svelte": {
-    "file": "_app/immutable/components/pages/_pokemon_pokemon_/_type_type_/_page.svelte-5ca33aad.js",
-    "src": "src/routes/[pokemon=pokemon]/[type=type]/+page.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-de548609.js",
-      "_Raid-5caf2225.js"
+      ".svelte-kit/generated/nodes/5.js"
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-2f2846bf.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-30d0f3fb.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-de548609.js",
-      "_stores-c0960786.js"
+      "_index-df1b6393.js",
+      "_stores-625d1a5d.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout-c6dfcd8f.css"
+      "_app/immutable/assets/_layout-121f180c.css"
     ]
   },
   "src/routes/tera-type-calculator.html/+page.svelte": {
-    "file": "_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-066122f5.js",
+    "file": "_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-692bcc6a.js",
     "src": "src/routes/tera-type-calculator.html/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-de548609.js",
-      "_Scripts-8152b69a.js",
-      "_tera.scores-094278cd.js",
-      "_sendEvent-dc646829.js",
+      "_index-df1b6393.js",
+      "_Scripts-d73a1027.js",
+      "_sendEvent-73a52b3d.js",
       "_interfaces-64f496f9.js"
     ],
     "css": [
       "_app/immutable/assets/_page-09b3c40f.css"
     ]
   },
-  "_tera.scores-094278cd.js": {
-    "file": "_app/immutable/chunks/tera.scores-094278cd.js",
-    "imports": [
-      "_interfaces-64f496f9.js"
-    ]
-  },
   "src/routes/privacy-policy.html/+page.svelte": {
-    "file": "_app/immutable/components/pages/privacy-policy.html/_page.svelte-b1ee16ba.js",
+    "file": "_app/immutable/components/pages/privacy-policy.html/_page.svelte-3c063959.js",
     "src": "src/routes/privacy-policy.html/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-de548609.js",
-      "_Scripts-8152b69a.js"
+      "_index-df1b6393.js",
+      "_Scripts-d73a1027.js"
     ]
   },
-  "_sendEvent-dc646829.js": {
-    "file": "_app/immutable/chunks/sendEvent-dc646829.js",
+  "_sendEvent-73a52b3d.js": {
+    "file": "_app/immutable/chunks/sendEvent-73a52b3d.js",
     "imports": [
-      "_index-de548609.js"
+      "_index-df1b6393.js",
+      "_interfaces-64f496f9.js"
     ],
     "css": [
       "_app/immutable/assets/sendEvent-30abcd50.css"
     ]
   },
-  "_Raid-5caf2225.js": {
-    "file": "_app/immutable/chunks/Raid-5caf2225.js",
+  "src/routes/+page.svelte": {
+    "file": "_app/immutable/components/pages/_page.svelte-9660c48c.js",
+    "src": "src/routes/+page.svelte",
+    "isEntry": true,
     "imports": [
-      "_index-de548609.js",
-      "_sendEvent-dc646829.js",
+      "_index-df1b6393.js",
+      "_sendEvent-73a52b3d.js",
       "_interfaces-64f496f9.js",
-      "_tera.scores-094278cd.js",
-      "_tera.raid-390cb35e.js",
-      "_singletons-da236e82.js",
-      "_stores-c0960786.js"
+      "_Scripts-d73a1027.js"
     ],
     "css": [
-      "_app/immutable/assets/Raid-041e27f7.css"
-    ]
-  },
-  "_tera.raid-390cb35e.js": {
-    "file": "_app/immutable/chunks/tera.raid-390cb35e.js",
-    "imports": [
-      "_interfaces-64f496f9.js",
-      "_tera.scores-094278cd.js"
+      "_app/immutable/assets/_page-4255f6f5.css"
     ]
   }
 }
